# toy

./: CMakeLists.txt  DecCheck.cpp  Makefile  README.md  SAMCheck.c  SAMCheck.cpp  calcCov.cpp  check2Files.c  chr_extract.c  ctgals.cpp  eva2sam.c  fetch.cpp  generate_cs.c  getReadsInfo.c  getReads_n.cpp  harc2fq.c  hfastq.c  hfastq.h  hsfq.c  kseq.h  kstring.c  kstring.h  kvec.h  main.c  main.cpp  malloc_wrap.h  merge_fastq.c  metaCheck.cpp  parallel_test.c  proc_stat.c  progress.c  progress.h  pstat.c  pstat_client.py  pstat_server.py  readme.md  reads2fa.c  reorder_R2.c  reorder_qq.c  sam2pe_sfq.c  (+16 more)
dev_notes/: pstat.md  reorder_qq.md  sort_reads.md
log_analysis/: reorder_qq.py  sort_reads.py  utils.py
